空頂点についての定義を追加

--- a/memo/考察.md
+++ b/memo/考察.md
@@ -25,3 +25,6 @@ A: (a, b)...(?, a)
 B: (a, ?)...(c, a)
 
 となる。この時(a, b)(c, a)を消去し(a, E)(E, b) (c, E)(E, a)の辺を追加することでEvenの追加ができる。
+
+## 空頂点の削除について。
+ある空頂点iが存在し、辺(a, i)と(i, b)が存在する場合、その2辺を削除し(a, b)の辺を追加することができる。
