Odd頂点の分割操作の定義を追加

--- a/memo/考察.md
+++ b/memo/考察.md
@@ -26,5 +26,25 @@ B: (a, ?)...(c, a)
 
 となる。この時(a, b)(c, a)を消去し(a, E)(E, b) (c, E)(E, a)の辺を追加することでEvenの追加ができる。
 
+---
+
 ## 空頂点の削除について。
 ある空頂点iが存在し、辺(a, i)と(i, b)が存在する場合、その2辺を削除し(a, b)の辺を追加することができる。
+
+---
+
+## 頂点の分割について
+頂点は
++ Odd→Odd+Even
++ Even→Odd+Odd | Even+Even
+
+に分割出来る。
+
+まずはOddのタイプを判別する必要がある。typeAとtypeBである。そのOを始点にした経路を二つ用意し、それらが異なるならtypeA, 同じならtypeBである。
+
+
+### OddがtypeAの場合の分割
+(O, a), (O, b)を削除し、(O, E), (E, a) (O, E), (E, b)を追加する。
+
+### OddがtypeBの場合の分割
+Oを一回ずつだけ通る経路[(O, a)...(b, O)]を見つける。(O, a), (b, O)を削除し(O, E), (E, a), (b, E), (E, O)を追加する。
