S+(Odd)に関する考察を追加

--- a/memo/考察.md
+++ b/memo/考察.md
@@ -18,6 +18,8 @@ S+には二種類ある。
 
 この経路を(a, b)...(c, d)...(?, a)と表すとき、(a, b), (c, d)を消去し(a, O)(b, O) (O, c)(O, d)の辺を追加することで前提を保ったままOddの追加ができる。(?, a) == (c, d)でもよい。
 
+追記：(a, b)と(?, a)の間にある辺は逆転する？(step2-3からste3-5を生やすにはそう定義するしかない気がする)
+
 ### Even追加
 前提3の経路を考える。それぞれ経路A, Bとすると
 
@@ -48,3 +50,11 @@ B: (a, ?)...(c, a)
 
 ### OddがtypeBの場合の分割
 Oを一回ずつだけ通る経路[(O, a)...(b, O)]を見つける。(O, a), (b, O)を削除し(O, E), (E, a), (b, E), (E, O)を追加する。
+
+Evenのタイプ判別はOddの逆である。
+
+### EvenがtypeAの場合の分割
+(a, E), (b, E), (E, c), (E, d)を削除し、(a, O1), (b, O1), (O1, O2), (O1, O2), (O2, c), (O2, d)を追加する。
+
+### EvenがtypeBの場合の分割
+分かり次第書きます。
