typeAのOdd分割の種類を増やした

--- a/memo/考察.md
+++ b/memo/考察.md
@@ -46,8 +46,9 @@ B: (a, ?)...(c, a)
 
 
 ### OddがtypeAの場合の分割
-(O, a), (O, b)を削除し、(O, E), (E, a) (O, E), (E, b)を追加する。
-
+1. (O, a), (O, b)を削除し、(O, E), (E, a) (O, E), (E, b)を追加する。
+2. (c, O), (d, O)を削除し、(c, E), (d, E), (E, O), (E, O)を追加する。
+ 
 ### OddがtypeBの場合の分割
 Oを一回ずつだけ通る経路[(O, a)...(b, O)]を見つける。(O, a), (b, O)を削除し(O, E), (E, a), (b, E), (E, O)を追加する。
 
