step3-7~12の図とグラフを描いた。step2からの操作はまだ。

--- a/memo/2to3.md
+++ b/memo/2to3.md
@@ -105,3 +105,33 @@ O2を始点とした経路[(O2, E3), (E3, E2), (E2, O1), (O1, O2)]の(O2, E3), (
 
 ---
 
+### step3-7(P2-2cd)
+![step3-7](../docs/images/step3-7.png)
+
+
+---
+
+### step3-8(P2-3ab)
+![step3-8](../docs/images/step3-8.png)
+
+
+---
+
+### step3-9(P2-3bd)
+![step3-9](../docs/images/step3-9.png)
+
+---
+
+### step3-10(P3ab)
+![step3-10](../docs/images/step3-10.png)
+
+---
+
+### step3-11(P3cd)
+![step3-11](../docs/images/step3-11.png)
+
+
+---
+
+### step3-12(P5ab/P5cd)
+![step3-12](../docs/images/step3-12.png)
