Evenの追加条件などを修正

--- a/memo/考察.md
+++ b/memo/考察.md
@@ -11,22 +11,31 @@ S+には二種類ある。
 2. ある頂点を始点かつ終点として、辺の重複なく、かつ始点を2回しか通らない経路が存在する。
 3. OddまたはEvenブロックが一個以上ある場合、そのブロックを始点かつ終点とした、互いに辺の重複が無い経路が二つ得られる。(有向グラフとみた場合)
 
-これはEven追加の時に使う。
 
 ### Odd追加
 前提2の経路を考える。その内二つの辺を選ぶと、必ず向きが反対になる。そのためここにOddを追加できる。
 
 この経路を(a, b)...(c, d)...(?, a)と表すとき、(a, b), (c, d)を消去し(a, O)(b, O) (O, c)(O, d)の辺を追加することで前提を保ったままOddの追加ができる。(?, a) == (c, d)でもよい。
 
-追記：(a, b)と(?, a)の間にある辺は逆転する？(step2-3からste3-5を生やすにはそう定義するしかない気がする)
+
+#### この時、(a, b)と(c, d)の間にある辺は逆転する。
+
+例: [(a, b), (b, c), (c, d), (d, a)]という経路が存在する。(a, b)と(c, d)に対してS+(Odd)を行うと、(a, b)は(a, O), (b, O)になり、(c, d)は(O, c), (O, d)になり、間の(b, c)は(c, b)になる。
+
+全体としての辺は(a, O), (b, O), (O, c), (O, d), (c, b), (d, a)になる。
+![sample_of_Splus_Odd](../docs/images/sample-of-splus-odd.png)
 
 ### Even追加
+ある点を始点としたけいろを二つ考える。それぞれ[(a, b)...(?, a)], [(a, c)...(?, a)]とする。
+この時(a, b)と(a, c)を消して(a, E), (E, b), (a, E), (E, c)を追加できる。
+
+##### 仮説2
 前提3の経路を考える。それぞれ経路A, Bとすると
 
 A: (a, b)...(?, a)  
 B: (a, ?)...(c, a)
 
-となる。この時(a, b)(c, a)を消去し(a, E)(E, b) (c, E)(E, a)の辺を追加することでEvenの追加ができる。
+となる。この時「b=cならば」(a, b)(c, a)を消去し(a, E)(E, b) (c, E)(E, a)の辺を追加することでEvenの追加ができる。
 
 ---
 
@@ -44,18 +53,27 @@ B: (a, ?)...(c, a)
 
 まずはOddのタイプを判別する必要がある。typeAとtypeBである。そのOを始点にした経路を二つ用意し、それらが異なるならtypeA, 同じならtypeBである。
 
+Evenのタイプ判別はOddの逆である。(E始点の二つの経路が同じならtypeA, 異なるならtypeB)
 
 ### OddがtypeAの場合の分割
 1. (O, a), (O, b)を削除し、(O, E), (E, a) (O, E), (E, b)を追加する。
 2. (c, O), (d, O)を削除し、(c, E), (d, E), (E, O), (E, O)を追加する。
  
 ### OddがtypeBの場合の分割
-Oを一回ずつだけ通る経路[(O, a)...(b, O)]を見つける。(O, a), (b, O)を削除し(O, E), (E, a), (b, E), (E, O)を追加する。
+Oを始点とした、全ての辺を一回ずつ通る経路[(O, a)...(b, O)]を見つける。(O, a), (b, O)を削除し(O, E), (E, a), (b, E), (E, O)を追加する。
 
-Evenのタイプ判別はOddの逆である。
 
 ### EvenがtypeAの場合の分割
 (a, E), (b, E), (E, c), (E, d)を削除し、(a, O1), (b, O1), (O1, O2), (O1, O2), (O2, c), (O2, d)を追加する。
 
 ### EvenがtypeBの場合の分割
-分かり次第書きます。
+Eを始点とした経路が2つある。それぞれを
++ A: [(E, a)...(b, E)]
++ B: [(E, c)...(d, E)]
+
+とする。この時
+
+(E, a), (b, E), (E, c), (d, E)を削除し、(O1, a), (b, O2), (O2, c), (d, O1), (O1, O2)と(O2, O1)を追加する。
+
+
+EvenをE+Eに分割するときはO1, O2をE1, E2に読み替えて操作すればよい。
