S+(Even)の操作を頂点のtypeに応じて行うようにした

--- a/memo/考察.md
+++ b/memo/考察.md
@@ -29,13 +29,10 @@ S+には二種類ある。
 ある点を始点としたけいろを二つ考える。それぞれ[(a, b)...(?, a)], [(a, c)...(?, a)]とする。
 この時(a, b)と(a, c)を消して(a, E), (E, b), (a, E), (E, c)を追加できる。
 
-##### 仮説2
-前提3の経路を考える。それぞれ経路A, Bとすると
-
-A: (a, b)...(?, a)  
-B: (a, ?)...(c, a)
-
-となる。この時「b=cならば」(a, b)(c, a)を消去し(a, E)(E, b) (c, E)(E, a)の辺を追加することでEvenの追加ができる。
+##### 仮説
+選んだ頂点のtypeでどうつくか変わりそう
+A→(P, a), (P, b)を(P, E), (E, a), (P, E), (E, b)にする
+B→全ての辺を一回ずつ通るようなP始点の経路の最初と最後を(P, a), (b, P)とすると(P, E), (E, a), (b, E), (E, P)にする
 
 ---
 
