type判定ができない

--- a/memo/考察.md
+++ b/memo/考察.md
@@ -48,9 +48,12 @@ B→全ての辺を一回ずつ通るようなP始点の経路の最初と最後
 
 に分割出来る。
 
-まずはOddのタイプを判別する必要がある。typeAとtypeBである。そのOを始点にした経路を二つ用意し、それらが異なるならtypeA, 同じならtypeBである。
+```まずはOddのタイプを判別する必要がある。typeAとtypeBである。そのOを始点にした経路を二つ用意し、それらが異なるならtypeA, 同じならtypeBである。
 
 Evenのタイプ判別はOddの逆である。(E始点の二つの経路が同じならtypeA, 異なるならtypeB)
+```
+
+↑違う。
 
 ### OddがtypeAの場合の分割
 1. (O, a), (O, b)を削除し、(O, E), (E, a) (O, E), (E, b)を追加する。
