--- a/memo/0to1.md
+++ b/memo/0to1.md
@@ -1,9 +1,9 @@
 ### step0
-![step0](../docs/images/step0.png)
+![step0](images/step0.png)
 (i, j), (i, j)
 
 ### step1
-![step1](../docs/images/step1.png)
+![step1](images/step1.png)
 (i, O), (O, j), (j, O), (O, i)
 
 #### step0to1
