--- a/memo/1to2.md
+++ b/memo/1to2.md
@@ -1,9 +1,9 @@
 ### step1
-![step1](images/step1.png)
+![step1](../images/0to1/step1.png)
 (i, O), (O, j), (j, O), (O, i)
 
 ### step2-1
-![step2-1](images/step2-1.png)
+![step2-1](../images/1to2/step2-1.png)
 (i, O1), (O1, O2), (O2, j), (j, O2), (O2, O1), (O1, i)
 
 #### step1to2-1
@@ -18,7 +18,7 @@ iを始点とした経路[(i, O1), (O1, j), (j, O1), (O1, i)]を考え、(O1, j)
 ---
 
 ### step2-2
-![step2-2](images/step2-2.png)
+![step2-2](../images/1to2/step2-2.png)
 (O, E), (E, O), (O, E), (E, O)
 
 #### step1to2-2
@@ -32,7 +32,7 @@ step1において、Oを始点とした経路[(O, i), (i, O)]と[(O, j), (j, O)]
 ---
 
 ### step2-3
-![step2-3](images/step2-3.png)
+![step2-3](../images/1to2/step2-3.png)
 (O1, O2), (O2, E), (E, O2), (O2, O1), (O1, E), (E, O1)
 
 #### step1to2-3
