--- a/memo/考察.md
+++ b/memo/考察.md
@@ -23,7 +23,7 @@ S+には二種類ある。
 例: [(a, b), (b, c), (c, d), (d, a)]という経路が存在する。(a, b)と(c, d)に対してS+(Odd)を行うと、(a, b)は(a, O), (b, O)になり、(c, d)は(O, c), (O, d)になり、間の(b, c)は(c, b)になる。
 
 全体としての辺は(a, O), (b, O), (O, c), (O, d), (c, b), (d, a)になる。
-![sample_of_Splus_Odd](../docs/images/sample-of-splus-odd.png)
+![sample_of_Splus_Odd](../images/考察/sample-of-splus-odd.png)
 
 ### Even追加
 ある点を始点としたけいろを二つ考える。それぞれ[(a, b)...(?, a)], [(a, c)...(?, a)]とする。
